@@ -28,13 +28,13 @@ subtest "check interfaces" => sub {
     isa_ok 'GDPR::IAB::TCFv2::Constants::SpecialFeature',  'Exporter';
     isa_ok 'GDPR::IAB::TCFv2::Constants::RestrictionType', 'Exporter';
 
-    my @methods = qw<Parse contains all TO_JSON>;
+    my @role_methods = qw<Parse contains TO_JSON>;
 
-    can_ok 'GDPR::IAB::TCFv2::BitField',     @methods;
-    can_ok 'GDPR::IAB::TCFv2::RangeSection', @methods;
+    can_ok 'GDPR::IAB::TCFv2::BitField',              @role_methods;
+    can_ok 'GDPR::IAB::TCFv2::RangeSection',          @role_methods;
+    can_ok 'GDPR::IAB::TCFv2::PublisherRestrictions', @role_methods;
 
-    can_ok 'GDPR::IAB::TCFv2::PublisherRestrictions',
-      qw<new check_publisher_restriction TO_JSON>;
+    can_ok 'GDPR::IAB::TCFv2::RangeSection', qw<all>;
 
     done_testing;
 };
